@@ -40,6 +40,7 @@ import org.junit.Assert;
 import org.junit.Test;
 
 import com.vaadin.flow.component.Component;
+import com.vaadin.flow.component.HasEnabled;
 import com.vaadin.flow.component.HasText;
 import com.vaadin.flow.component.HtmlComponent;
 import com.vaadin.flow.component.HtmlContainer;
@@ -49,7 +50,7 @@ import com.vaadin.flow.component.html.OrderedList.NumberingType;
 import com.vaadin.flow.internal.StateNode;
 import com.vaadin.flow.internal.change.NodeChange;
 import com.vaadin.flow.server.AbstractStreamResource;
-import com.vaadin.flow.server.DownloadHandler;
+import com.vaadin.flow.server.streams.DownloadHandler;
 
 public class HtmlComponentSmokeTest {
 
@@ -138,7 +139,8 @@ public class HtmlComponentSmokeTest {
             // Test that all setters produce a result
             testSetters(instance);
         } catch (InstantiationException | IllegalAccessException
-                | IllegalArgumentException | InvocationTargetException e) {
+                | IllegalArgumentException | InvocationTargetException
+                | NoSuchMethodException e) {
             throw new RuntimeException(e);
         }
     }
@@ -173,8 +175,12 @@ public class HtmlComponentSmokeTest {
     private static void testSetters(HtmlComponent instance) {
         Arrays.stream(instance.getClass().getMethods())
                 .filter(HtmlComponentSmokeTest::isSetter)
-                .filter(m -> !isSpecialSetter(m))
-                .forEach(m -> testSetter(instance, m));
+                .filter(m -> !isSpecialSetter(m)).forEach(m -> {
+                    if (instance instanceof HasEnabled) {
+                        ((HasEnabled) instance).setEnabled(true);
+                    }
+                    testSetter(instance, m);
+                });
     }
 
     private static boolean isSetter(Method method) {
@@ -202,12 +208,6 @@ public class HtmlComponentSmokeTest {
     }
 
     private static boolean isSpecialSetter(Method method) {
-        // Shorthand for Label.setFor(String)
-        if (method.getDeclaringClass() == Label.class
-                && method.getName().equals("setFor")
-                && method.getParameterTypes()[0] == Component.class) {
-            return true;
-        }
         if (method.getDeclaringClass() == NativeLabel.class
                 && method.getName().equals("setFor")
                 && method.getParameterTypes()[0] == Component.class) {
@@ -379,12 +379,13 @@ public class HtmlComponentSmokeTest {
 
     private static HtmlComponent createInstance(
             Class<? extends HtmlComponent> clazz)
-            throws InstantiationException, IllegalAccessException {
+            throws InstantiationException, IllegalAccessException,
+            NoSuchMethodException, InvocationTargetException {
         Supplier<HtmlComponent> constructor = customConstructors.get(clazz);
         if (constructor != null) {
             return constructor.get();
         } else {
-            return clazz.newInstance();
+            return clazz.getDeclaredConstructor().newInstance();
         }
     }
 
