@@ -18,26 +18,22 @@ package com.vaadin.flow.server.webcomponent;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.Serializable;
-import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.node.ArrayNode;
-import com.fasterxml.jackson.databind.node.ObjectNode;
-import org.apache.commons.io.IOUtils;
+import tools.jackson.databind.JsonNode;
+import tools.jackson.databind.node.ArrayNode;
+import tools.jackson.databind.node.BaseJsonNode;
 
 import com.vaadin.flow.component.Component;
 import com.vaadin.flow.component.WebComponentExporter;
 import com.vaadin.flow.component.WebComponentExporterFactory;
 import com.vaadin.flow.component.webcomponent.WebComponentConfiguration;
+import com.vaadin.flow.internal.StringUtil;
 import com.vaadin.flow.shared.util.SharedUtil;
 import com.vaadin.flow.theme.Theme;
-
-import elemental.json.JsonArray;
-import elemental.json.JsonValue;
 
 /**
  * Generates a client-side web component from a Java class.
@@ -66,7 +62,7 @@ public class WebComponentGenerator {
     private static String getStringResource(String name) {
         try (InputStream resourceStream = WebComponentGenerator.class
                 .getResourceAsStream(name)) {
-            return IOUtils.toString(resourceStream, StandardCharsets.UTF_8);
+            return StringUtil.toUTF8String(resourceStream.readAllBytes());
         } catch (IOException e) {
             throw new IllegalArgumentException(
                     "Couldn't load string resource '" + name + "'!", e);
@@ -156,8 +152,9 @@ public class WebComponentGenerator {
                     "import {applyTheme} from 'Frontend/generated/theme.js';\n\n");
             replacements.put("ApplyTheme", "applyTheme(shadow);\n    ");
         } else {
-            replacements.put("ThemeImport", "");
-            replacements.put("ApplyTheme", "");
+            replacements.put("ThemeImport",
+                    "import {applyCss} from 'Frontend/generated/css.generated.js';\n\n");
+            replacements.put("ApplyTheme", "applyCss(shadow);\n    ");
         }
         replacements.put("TagDash", tag);
         replacements.put("TagCamel", SharedUtil
@@ -254,17 +251,14 @@ public class WebComponentGenerator {
         } else if (property.getType() == String.class) {
             value = "'" + ((String) property.getDefaultValue()).replaceAll("'",
                     "\\'") + "'";
-        } else if (JsonValue.class.isAssignableFrom(property.getType())) {
-            value = ((JsonValue) property.getDefaultValue()).toJson();
         } else if (JsonNode.class.isAssignableFrom(property.getType())) {
             value = property.getDefaultValue().toString();
         } else {
             throw new UnsupportedPropertyTypeException(String.format(
                     "%s is not a currently supported type for a Property."
-                            + " Please use %s or %s instead.",
+                            + " Please use %s instead.",
                     property.getType().getSimpleName(),
-                    JsonNode.class.getSimpleName(),
-                    JsonValue.class.getSimpleName()));
+                    JsonNode.class.getSimpleName()));
         }
         if (value == null) {
             value = "null";
@@ -306,11 +300,10 @@ public class WebComponentGenerator {
             return "Number";
         } else if (propertyData.getType() == String.class) {
             return "String";
-        } else if (JsonArray.class.isAssignableFrom(propertyData.getType())
-                || ArrayNode.class.isAssignableFrom(propertyData.getType())) {
+        } else if (ArrayNode.class.isAssignableFrom(propertyData.getType())) {
             return "Array";
-        } else if (JsonValue.class.isAssignableFrom(propertyData.getType())
-                || ObjectNode.class.isAssignableFrom(propertyData.getType())) {
+        } else if (BaseJsonNode.class
+                .isAssignableFrom(propertyData.getType())) {
             return "Object";
         } else {
             throw new IllegalStateException(
