@@ -1,3 +1,18 @@
+/*
+ * Copyright 2000-2025 Vaadin Ltd.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License"); you may not
+ * use this file except in compliance with the License. You may obtain a copy of
+ * the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+ * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
+ * License for the specific language governing permissions and limitations under
+ * the License.
+ */
 package com.vaadin.base.devserver.startup;
 
 import java.lang.reflect.Field;
@@ -11,7 +26,7 @@ import org.junit.Assert;
 import org.junit.Ignore;
 import org.junit.Test;
 
-import com.vaadin.flow.server.frontend.FrontendUtils;
+import com.vaadin.flow.internal.FrontendUtils;
 import com.vaadin.flow.testutil.TestUtils;
 
 public class DevModeInitializerClassLoaderTest {
@@ -35,7 +50,7 @@ public class DevModeInitializerClassLoaderTest {
         // Load the base class with the custom loader
         Class<?> clz = customLoader
                 .loadClass(DevModeInitializerTestBase.class.getName());
-        Object initializer = clz.newInstance();
+        Object initializer = clz.getDeclaredConstructor().newInstance();
 
         // Since base class was created using a different classLoader,
         // its methods and fields need to be called using reflection
