@@ -1,17 +1,31 @@
+/*
+ * Copyright 2000-2025 Vaadin Ltd.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License"); you may not
+ * use this file except in compliance with the License. You may obtain a copy of
+ * the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+ * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
+ * License for the specific language governing permissions and limitations under
+ * the License.
+ */
 package com.vaadin.base.devserver.stats;
 
 import java.io.File;
 import java.net.InetSocketAddress;
 import java.nio.charset.Charset;
 
-import com.fasterxml.jackson.databind.node.ObjectNode;
 import com.sun.net.httpserver.HttpServer;
-import org.apache.commons.io.IOUtils;
 import org.junit.After;
 import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
 import org.mockito.Mockito;
+import tools.jackson.databind.node.ObjectNode;
 
 import com.vaadin.flow.testutil.TestUtils;
 import com.vaadin.flow.testutil.net.PortProber;
@@ -169,8 +183,9 @@ public class StatisticsSenderTest extends AbstractStatisticsTest {
             HttpServer httpServer = HttpServer.create(
                     new InetSocketAddress(PortProber.findFreePort()), 0);
             httpServer.createContext("/", exchange -> {
-                this.lastRequestContent = IOUtils.toString(
-                        exchange.getRequestBody(), Charset.defaultCharset());
+                this.lastRequestContent = new String(
+                        exchange.getRequestBody().readAllBytes(),
+                        Charset.defaultCharset());
                 exchange.sendResponseHeaders(status, response.length());
                 exchange.getResponseBody().write(response.getBytes());
                 exchange.close();
